# axum_demo

./: .config.toml  .env  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  permission.js
frontend/src/apis/: endpoint.js  menu.js  parameter.js  user.js
frontend/src/components/Breadcrumb/: index.vue
frontend/src/enums/: common.js
frontend/src/layout/: index.vue
frontend/src/layout/components/: AppMain.vue  HeaderSearch.vue  Navbar.vue
frontend/src/layout/components/Sidebar/: SidebarItem.vue  index.vue
frontend/src/layout/components/TagsView/: ContextMenum.vue  index.vue
frontend/src/router/: index.js
frontend/src/stores/: user.js
frontend/src/utils/: enumUtils.js  request.js
frontend/src/views/dashboard/: index.vue
frontend/src/views/errorPage/: 401.vue  404.vue
frontend/src/views/login/: index.vue
frontend/src/views/menu/: index.vue
frontend/src/views/summer/: index.vue
frontend/src/views/user/: index.vue
scripe/: first.sql
script/: first.sql
src/: error.rs  errror.rs  handlers.rs  main.rs  model.rs  prelude.rs
src/core/: config.rs  constant.rs  extractor.rs  log.rs  middleware.rs  mod.rs  state.rs
src/dao/: common.rs  endpoint_dao.rs  menu_dao.rs  mod.rs  query_build.rs  user_dao.rs
src/entity/: custom_parameter.rs  database_info.rs  domain.rs  endpoint.rs  menu.rs  mod.rs  prelude.rs  report.rs  report_detail.rs  repository.rs  repository_detail.rs  schedule.rs  task.rs  user.rs
src/model/: first.rs  mod.rs
src/router/: endpoint.rs  hello.rs  menu.rs  mod.rs  user.rs  web.rs
src/scheduler/: job1.rs  job2.rs  mod.rs
src/service/: menu_service.rs
src/utils/: mod.rs  redis.rs
src/vo/: common_vo.rs  endpoint_vo.rs  menu_vo.rs  mod.rs  user_vo.rs
