[package]
name = "axum_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.12"
tokio-cron-scheduler = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sqlx = {version = "0.8.6",features = ["runtime-tokio-rustls", "mysql", "chrono", "json"]}
chrono = "0.4.41"
bb8 = "0.8.5"
bb8-redis = "0.17.0"
redis = "0.27.2"
uuid = { version = "1.16.0", features = ["v4"] }
config = "0.15.14"
rand = "0.9.1"

