[package]
name = "axum_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.16"
tokio-cron-scheduler = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter","chrono"] }
tracing-appender = "0.2.3"
sqlx = {version = "0.8.6",features = ["runtime-tokio-rustls", "mysql", "chrono", "json"]}
chrono = { version = "0.4.41", features = ["serde"] }
bb8 = "0.9.0"
bb8-redis = "0.24.0"
redis = "0.32.5"
uuid = { version = "1.18.0", features = ["v4"] }
config = "0.15.15"
rand = "0.9.2"
heck = "0.5.0"

