[package]
name = "axum_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.16"
tokio-cron-scheduler = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter","chrono"] }
tracing-appender = "0.2.3"
sea-orm = {version = "~2.0.0-rc.11",features = ["with-chrono","sqlx-mysql","with-json","runtime-tokio-rustls","macros","debug-print"]}
chrono = { version = "0.4.41", features = ["serde"] }
bb8 = "0.9.0"
bb8-redis = "0.24.0"
redis = "0.32.5"
uuid = { version = "1.18.0", features = ["v4"] }
config = "0.15.15"
rand = "0.9.2"
heck = "0.5.0"
rust-embed = {version = "8.7.2",features = ["axum","tokio","mime-guess",]}
